Fix crash in Meta::MediaDeviceHandler::setupAlbumMap() (my bad)

Thanks for your report, jlimberger@gmail.com, I made a mistake when
refactoring other code in Amarok.

BUG: 291968